name: todo
version: 0.1.0.0
homepage: https://github.com/JordyMoos/haskell-todo
license: MIT
author: Jordy Moos
category: Command Line
build-type: Simple
cabal-version: >= 1.10
extra-source-files: README.md

executable todo-exe
  default-language: Haskell2010
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -Werror -fwarn-incomplete-patterns
  build-depends: base >= 4.7 && < 5
                , optparse-applicative
